Microservices/lesson_8/app/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geekbrains
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: __MYHOSTNAME__
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: geekbrains
                port:
                  number: 8000
